src/test/ui/regions/region-bound-extra-bound-in-inherent-impl.stderr
error: compilation successful
  --> $DIR/region-bound-extra-bound-in-inherent-impl.rs:26:1
   |
LL | fn main() { } //~ ERROR compilation successful
   | ^^^^^^^^^^^^^

error: aborting due to previous error

